tests/ui/compile-fail/section-in-async-block.stderr
error: section cannot be described in an async block
 --> $DIR/section-in-async-block.rs:6:9
  |
6 | /         section!("section", {
7 | |             assert!(true);
8 | |         });
  | |__________^
